changes in index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
 <main class="wrapper">
-	<header class="page-heading">Top Companies</header>
-	<!-- Companies Tree -->
+	<header class="page-heading">Companies tree</header>
+
 	<div class="easy-tree">
 		<ul></ul>
 	</div>
